Bootcamp MLOps Agregado, portfolio modificado y terminado

--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <div class="column">
                     <div class="logo">
                         <!-- <span class="gear rodar">S</span> -->
-                        <img src="img/logo1.png" class="gear" alt="">
-                        <a href="#" id="marcaPersonal">
+                        <img src="img/logo1.png" class="gear" alt="Imagen de una rueda con símbolos de etiqueta HTML">
+                        <a href="https://linktr.ee/nahuel.lopez" target="_blank" id="marcaPersonal">
                             <p class="m-0">Nahuel</p>
                             <p class="m-0">Dev1⚡</p>
                         </a>
@@ -122,7 +122,7 @@
                 <div class="info presentacionInfo">
                     <p class="fs-4 m-0">Data Engineer en NTT Data</p>
                     <p class="fs-4 mt-3 lead">2023 - actualmente</p>
-                    <p class="presentacionInfoPrincipal lead">Modelado de Datos con Spark.
+                    <p class="resumen lead">Modelado de Datos con Spark.
                         Desarrollo de modelos de de Machine Learning. Refactorización de modelos a Spark. 
                         Resolución de problemas de ingeniería, análisis y
                         ciencia de datos aplicando Machine Learning.</p>
@@ -130,18 +130,18 @@
                 <div class="info presentacionInfo">
                     <p class="fs-4 m-0">Tutor de JavaScript y Backend con Node</p>
                     <p class="fs-4 mt-3 lead">2022-2024</p>
-                    <p class="presentacionInfoPrincipal lead">Tutor de JavaScript y backend con Node.js, a cargo de un grupo de estudiantes como facilitador del aprendizaje, corrigiendo desafíos y entregas, dando apoyo continuo y trabajando en sus dificultades, para mejorar sus experiencias con el aprendizaje.</p>
+                    <p class="resumen lead">Tutor de JavaScript y backend con Node.js, a cargo de un grupo de estudiantes como facilitador del aprendizaje, corrigiendo desafíos y entregas, dando apoyo continuo y trabajando en sus dificultades, para mejorar sus experiencias con el aprendizaje.</p>
                 </div>
                 <div class="info presentacionInfo">
                     <p class="fs-4 m-0">Profesor de matemáticas</p>
                     <p class="fs-4 mt-3 lead">2016-2023</p>
-                    <p class="presentacionInfoPrincipal lead">Profesor a cargo de distintos cursos, durante más de 7
+                    <p class="resumen lead">Profesor a cargo de distintos cursos, durante más de 7
                         años, dando clases de matemática a adolescentes y adultos.</p>
                 </div>
                 <div class="info presentacionInfo">
                     <p class="fs-4 m-0">Desarrollador web Freelance</p>
                     <p class="fs-4 mt-3 lead">2021-2022</p>
-                    <p class="presentacionInfoPrincipal lead">Desarrollo de sitios web. Desarrollo frontend con HTML5, CSS3, SASS, Bootstrap, JavaScript, en trabajo colaborativo usando Git y GitHub.</p>
+                    <p class="resumen lead">Desarrollo de sitios web. Desarrollo frontend con HTML5, CSS3, SASS, Bootstrap, JavaScript, en trabajo colaborativo usando Git y GitHub.</p>
                 </div>
             </div>
         </section>
@@ -149,7 +149,7 @@
 
         <!-- Sección de skills (habilidades técnicas y blandas)-->
         <section>
-            <h2 id="skills" class="titulo fs-1 mt-4 mb-4">Skills</h2>
+            <h2 id="skills" class="titulo fs-1">Skills</h2>
             <div class="container">
                 <h3 class="subtitulo">Technical skills</h3>
                 <h3 class="subtitulo fs-4 lead">Tools:</h3>
@@ -260,9 +260,13 @@
                         <img src="img/skills/technical-skills/python.svg" class="iconoSkill" alt="logo de Python">
                         <p class="nombreIcono lead">Python</p>
                     </div>        
-                    <div class="m-2">
+                    <!-- <div class="m-2">
                         <img src="img/skills/technical-skills/django-plain.svg" class="iconoSkill" alt="logo de Django">
                         <p class="nombreIcono lead">Django</p>
+                    </div> -->
+                    <div class="m-2">
+                        <img src="img/skills/technical-skills/fastapi-original.svg" class="iconoSkill" alt="logo de FastAPI">
+                        <p class="nombreIcono lead">FastAPI</p>
                     </div>        
                     <div class="m-2">
                         <img src="img/skills/technical-skills/flask-original.svg" class="iconoSkill" alt="logo de Flask">
@@ -307,15 +311,9 @@
                         <img src="img/skills/technical-skills/react.svg" class="iconoSkill" alt="logo de React">
                         <p class="nombreIcono lead">React</p>
                     </div>
-                </div>
-                <div class="cajaSkills mb-5">
-                    <!-- <div class="m-2">
-                        <img src="img/skills/technical-skills/fastapi-original.svg" class="iconoSkill" alt="logo de FastAPI">
-                        <p class="nombreIcono lead">FastAPI</p>
-                    </div>         -->                
                 </div>    
                 <h3 class="subtitulo">Soft skills</h3>
-                <div class="cajaSkills mb-5">
+                <div class="cajaSkills">
                     <div class="m-2">
                         <img src="img/skills/soft-skills/resiliencia.png" class="iconoSkill" alt="resiliencia, mente positiva">
                         <p class="nombreIcono lead">Resiliencia</p>
@@ -389,7 +387,9 @@
         <section>
             <h2 id="formacion" class="titulo fs-1">Formación</h2>
             <div class="container">
-                <p class="resumen mt-4 mb-4">Esta es mi formación profesional principal. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en Udemy, Código Facilito, entre otros, que siempre me sirven para profundizar y complementar las formaciones.</p>
+                <p class="resumen lead">Esta es mi formación profesional. Sin embargo, cuento con otras certificaciones y estudios que acompañan mis conocimientos en tecnología, como cursos en Udemy, cursos en Código Facilito, entre otros, que siempre me sirven para profundizar y complementar las formaciones.</p>
+            </div>
+            <div class="container">
                 <div class="proyectos">
                     <!-- Ingeniería en sistemas UTEL -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
@@ -402,6 +402,18 @@
                             <p class="fs-4 mt-3 lead">En curso</p>
                         </div>
                     </article>
+                    <!-- Bootcamp de MLOps de Código Facilito -->
+                    <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
+                        <a href="https://drive.google.com/file/d/1IyRAmZvxtk2WeY41Ui3C4DaFu-d_do4S/view?usp=sharing" target="_blank">
+                            <img src="img/education/img-mlops.png"
+                                alt="imagen del logo del bootcamp de MLOps de Código Facilito" class="img">
+                        </a>
+                        <div class="info">
+                            <p class="fs-4 m-0">Bootcamp de MLOps</p>
+                            <p class="fs-4 mt-3 lead">2024 Jun-Sep</p>
+                        </div>
+                    </article>
+                    <!-- Bootcamp de Ingeniería de Datos de Código Facilito -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://drive.google.com/file/d/1IyRAmZvxtk2WeY41Ui3C4DaFu-d_do4S/view?usp=sharing" target="_blank">
                             <img src="img/education/img-ingenieria-de-datos.png"
@@ -412,6 +424,7 @@
                             <p class="fs-4 mt-3 lead">2024 Ene-Abr</p>
                         </div>
                     </article>
+                    <!-- Bootcamp de Data Engineer de Datapath -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
                         <a href="https://drive.google.com/file/d/1R3hyFYUTImk11AjBbamDoT0r4Iqtr09A/view?usp=sharing" target="_blank">
                             <img src="img/education/img-data-engineer.png"
@@ -736,7 +749,7 @@
     <!-- Acá termina el contenido principal -->
 
     <!-- Acá empieza el pie de página -->
-    <h2 id="contact" class="titulo text-center fs-1 mt-5">Contacto</h2>
+    <h2 id="contact" class="titulo fs-1">Contacto</h2>
     <footer id="footer" class="border-top container-fluid">
         <div class="container">
             <div class="row justify-content-around mt-3 gap-2 p-2">
