contenedor de certificaciones agregadas

--- a/index.html
+++ b/index.html
@@ -399,18 +399,18 @@
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Ingeniería en sistemas</p>
-                            <p class="fs-4 mt-3 lead">En curso</p>
+                            <p class="fs-4 mt-3 lead">2023 - 2026 (En curso)</p>
                         </div>
                     </article>
                     <!-- Bootcamp de MLOps de Código Facilito -->
                     <article id="proyectoCoderhouse" class="proyecto proyecto-hover">
-                        <a href="https://drive.google.com/file/d/1IyRAmZvxtk2WeY41Ui3C4DaFu-d_do4S/view?usp=sharing" target="_blank">
+                        <a href="#" target="_blank">
                             <img src="img/education/img-mlops.png"
                                 alt="imagen del logo del bootcamp de MLOps de Código Facilito" class="img">
                         </a>
                         <div class="info">
                             <p class="fs-4 m-0">Bootcamp de MLOps</p>
-                            <p class="fs-4 mt-3 lead">2024 Jun-Sep</p>
+                            <p class="fs-4 mt-3 lead">2024 Jun-Sep (En curso)</p>
                         </div>
                     </article>
                     <!-- Bootcamp de Ingeniería de Datos de Código Facilito -->
@@ -501,6 +501,29 @@
                             <p class="fs-4 mt-3 lead">2010-2018</p>
                         </div>
                     </article>
+                </div>
+                <!-- Certificaciones -->
+                <div class="container sobreMi">
+                    <div class="info presentacionInfo">
+                        <p class="fs-3 m-0 mb-2">Certificaciones</p>
+                 </div>
+                <div class="info presentacionInfo">
+                    <a href="https://credentials.databricks.com/1473c52e-c2e5-41ad-94d4-6fa71404e751#gs.azeh18" target="_blank" class="text-decoration-none">
+                        <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Databricks Lakehouse Fundamentals</p>
+                    </a>
+                    <p class="fs-4 lead">2022 Diciembre</p>
+                </div>
+                <div class="info presentacionInfo">
+                    <a href="#" target="_blank" class="text-decoration-none">
+                        <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Azure Fundamentals</p>
+                    </a>
+                    <p class="fs-4 lead">En preparación</p>
+                </div>
+                <div class="info presentacionInfo">
+                    <a href="#" target="_blank" class="text-decoration-none">
+                        <p class="fs-4 m-0">- <span><i class="fa-solid fa-certificate me-1"></i></span>Azure Data Fundamentals</p>
+                    </a>
+                    <p class="fs-4 lead">En preparación</p>
                 </div>
             </div>
         </section>
