espacios en los márgenes de las secciones corregidos

--- a/index.html
+++ b/index.html
@@ -118,29 +118,33 @@
         <!-- Sección acerca de mí -->
         <section>
             <h2 id="experiencia" class="titulo fs-1 mt-4">Experiencia</h2>
-            <div class="container sobreMi">
-                <div class="info presentacionInfo">
-                    <p class="fs-4 m-0">Data Engineer en NTT Data</p>
-                    <p class="fs-4 mt-3 lead">2023 - actualmente</p>
+            <div class="container">
+                <!-- Data Engineer -->
+                <div class="mb-3">
+                    <h3 class="subtitulo mb-1">Data Engineer en NTT Data<h3>
+                    <p class="subtitulo fs-4 lead mt-0 mb-2">2023 - actualmente</p>
                     <p class="resumen lead">Modelado de Datos con Spark.
                         Desarrollo de modelos de de Machine Learning. Refactorización de modelos a Spark. 
                         Resolución de problemas de ingeniería, análisis y
                         ciencia de datos aplicando Machine Learning.</p>
                 </div>
-                <div class="info presentacionInfo">
-                    <p class="fs-4 m-0">Tutor de JavaScript y Backend con Node</p>
-                    <p class="fs-4 mt-3 lead">2022-2024</p>
-                    <p class="resumen lead">Tutor de JavaScript y backend con Node.js, a cargo de un grupo de estudiantes como facilitador del aprendizaje, corrigiendo desafíos y entregas, dando apoyo continuo y trabajando en sus dificultades, para mejorar sus experiencias con el aprendizaje.</p>
+                <!-- Tutor en Coderhouse-->
+                <div class="mb-3">
+                    <h3 class="subtitulo mb-0">Tutor de JavaScript y Backend<h3>
+                    <p class="subtitulo fs-4 lead mt-0 mb-2">2022-2024</p>
+                    <p class="resumen lead">Tutor en Coderhouse de JavaScript y backend con Node.js, a cargo de un grupo de estudiantes como facilitador del aprendizaje, corrigiendo desafíos y entregas, dando apoyo continuo y trabajando en sus dificultades, para mejorar sus experiencias con el aprendizaje.<p>
                 </div>
-                <div class="info presentacionInfo">
-                    <p class="fs-4 m-0">Profesor de matemáticas</p>
-                    <p class="fs-4 mt-3 lead">2016-2023</p>
+                <!-- Profesor de matemáticas -->
+                <div class="mb-3">
+                    <h3 class="subtitulo mb-1">Profesor de matemáticas<h3>
+                    <p class="subtitulo fs-4 lead mt-0 mb-2">2016-2023</p>
                     <p class="resumen lead">Profesor a cargo de distintos cursos, durante más de 7
                         años, dando clases de matemática a adolescentes y adultos.</p>
                 </div>
-                <div class="info presentacionInfo">
-                    <p class="fs-4 m-0">Desarrollador web Freelance</p>
-                    <p class="fs-4 mt-3 lead">2021-2022</p>
+                <!-- Desarrollador web Freelance -->
+                <div class="mb-3">
+                    <h3 class="subtitulo mb-1">Desarrollador web Freelance<h3>
+                    <p class="subtitulo fs-4 lead mt-0 mb-2">2021-2022</p>
                     <p class="resumen lead">Desarrollo de sitios web. Desarrollo frontend con HTML5, CSS3, SASS, Bootstrap, JavaScript, en trabajo colaborativo usando Git y GitHub.</p>
                 </div>
             </div>
