corrigiendo los enlaces por cambio de nombre en GitHub

--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                 <div class="proyectos" class="mt-4">
                     <!-- Retos del programa de Python Data Analyst de NTT Data Foundation -->
                     <article class="proyecto proyecto-hover">
-                        <a href="https://github.com/Nahuel-DevOne/ntt-data-retos" target="_blank">
+                        <a href="https://github.com/nahuel-lopez-dev/ntt-data-retos" target="_blank">
                             <img src="./img/projects/banner-python-data-analyst.png" alt="imagen de la portada del PDF, del reto final del bootcamp de Python Data Analyst" class="img">
                         </a>
                         <div class="info">
@@ -551,14 +551,14 @@
                             <a href="https://drive.google.com/file/d/17rDATZPem4_FNr8wxD7m1oSyf-5vVgFY/view?usp=sharing" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Documentación</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/ntt-data-retos" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/ntt-data-retos" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
                     <!-- CRM de clientes, usando IndexedDB como base de datos -->
                     <article class="proyecto proyecto-hover">
-                        <a href="https://nahuel-devone.github.io/crm-clientes/" target="_blank">
+                        <a href="https://nahuel-lopez-dev.github.io/crm-clientes/" target="_blank">
                             <img src="./img/projects/portada-crm-clientes.png" alt="imagen de la app del CRM de clientes" class="img">
                         </a>
                         <div class="info">
@@ -566,26 +566,26 @@
                             <p class="fs-4 mt-3 lead">JS - IndexedDB</p>
                         </div>
                         <div class="d-flex">
-                            <a href="https://nahuel-devone.github.io/crm-clientes/" target="_blank">
+                            <a href="https://nahuel-lopez-dev.github.io/crm-clientes/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/crm-clientes" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/crm-clientes" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
                     <!-- App de pacientes, desarrollada durante el curso de introducción a JavaScript en el programa ONE -->
                     <article class="proyecto proyecto-hover">
-                        <a href="https://nahuel-devone.github.io/administrador-de-pacientes/" target="_blank"><img src="img/projects/portada-administrador-pacientes.png" alt="imagen de la app de pacientes" class="img"></a>
+                        <a href="https://nahuel-lopez-dev.github.io/administrador-de-pacientes/" target="_blank"><img src="img/projects/portada-administrador-pacientes.png" alt="imagen de la app de pacientes" class="img"></a>
                         <div class="info">
                             <p class="fs-4 m-0">App de pacientes</p>
                             <p class="fs-4 mt-3 lead">JavaScript</p>
                         </div>
                         <div class="d-flex">
-                            <a href="https://nahuel-devone.github.io/administrador-de-pacientes/" target="_blank">
+                            <a href="https://nahuel-lopez-dev.github.io/administrador-de-pacientes/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/administrador-de-pacientes" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/administrador-de-pacientes" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
@@ -603,7 +603,7 @@
                             <a href="https://game-blackjack-vite.netlify.app/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/blackjack-vite" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/blackjack-vite" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
@@ -621,7 +621,7 @@
                             <a href="https://determined-goldberg-229a88.netlify.app/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/ecommerce" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/ecommerce" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
@@ -639,14 +639,14 @@
                             <a href="https://todo-app-devone.netlify.app/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/todo-app-vite" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/todo-app-vite" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
                     </article>
                     <!-- Página web con HMTL5, CSS3 y JavaScript, como challenge para el programa de Codo a Codo -->
                     <article class="proyecto proyecto-hover">
-                        <a href="https://nahuel-devone.github.io/conferencia/" target="_blank">
+                        <a href="https://nahuel-lopez-dev.github.io/conferencia/" target="_blank">
                             <img src="./img/projects/portada-conferencia.png" alt="imagen de la portada de la página de conferencia Bs As." class="img">
                         </a>
                         <div class="info">
@@ -654,10 +654,10 @@
                             <p class="fs-4 mt-3 lead">Página Web</p>
                         </div>
                         <div class="d-flex">
-                            <a href="https://nahuel-devone.github.io/conferencia/" target="_blank">
+                            <a href="https://nahuel-lopez-dev.github.io/conferencia/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/conferencia" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/conferencia" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver código</button>
                             </a>
                         </div>
@@ -676,7 +676,7 @@
                             <a href="https://proyecto-coderhouse-smoky.vercel.app/" target="_blank">
                                 <button class="btn btn-md btnColorUno bg-gradient">Ver Demo</button>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/proyecto-coderhouse" target="_blank">
+                            <a href="https://github.com/nahuel-lopez-dev/proyecto-coderhouse" target="_blank">
                                 <button class="btn btn-md btnColorDos bg-gradient">Ver Código</button>
                             </a>
                         </div>
@@ -792,10 +792,10 @@
                     <div class="d-flex flex-column justify-content-start align-items-start">
                         <h4 class="mb-3">Contactame:</h4>
                         <div class="mb-2">
-                            <span><i class="fa-solid fa-envelope me-1"></i></span>nahuel.developer1@gmail.com
+                            <span><i class="fa-solid fa-envelope me-1"></i></span>nahuel.lopez.dev@gmail.com
                         </div>
                         <div class="border border-secondary rounded p-2 mb-2">
-                            <a href="mailTo:nahuel.developer1@gmail.com" id="escribeme" class="text-decoration-none footerContacto"><span><i class="fa-solid fa-message me-2"></i></span>Escríbeme</a>
+                            <a href="mailTo:nahuel.lopez.dev@gmail.com" id="escribeme" class="text-decoration-none footerContacto"><span><i class="fa-solid fa-message me-2"></i></span>Escríbeme</a>
                         </div>
                         <div class="p">
                             <p>No trabajo freelance ni contractor.</p>
@@ -806,7 +806,7 @@
                     <div class="d-flex flex-column justify-content-start align-items-start">
                         <h4 class="mb-3">Networking</h4>
                         <div>
-                            <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-2"><img src="img/social/github.svg"
+                            <a href="https://github.com/Nahuel-lopez-dev/" target="_blank" class="m-2"><img src="img/social/github.svg"
                                 alt="Imagen del icono de GitHub" class="iconoPresentacion bg-dark border"></a>
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-2"><img
                                 src="img/social/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion border"></a>
