--- a/index.html
+++ b/index.html
@@ -87,14 +87,14 @@
                             <br>
                             Amo el mundo de los datos, pero también el desarrollo. Por eso, estoy estudiando Ingeniería en Sistemas y cuento con formación de Full Stack Developer con JavaScript y Python.
                             <br>
-                            En mis tiempos libres me gusta aprender otras tecnologías, como así también profundizar y practicar las que ya conozco para consolidar mi stack.     
+                            En mis tiempos libres me gusta aprender otras tecnologías, como así también profundizar y practicar las que ya conozco, para consolidar mi stack como Data Engineer.     
                         </p>
                         <div class="cajaIconosPresentacion">
                             <a href="https://www.linkedin.com/in/nahuel-developer/" target="_blank" class="m-3 text-decoration-none">
                                 <img src="./img/social/linkedin.svg" alt="Imagen del icono de linkedIn" class="iconoPresentacion">
                                 <p class="nombreIcono lead">LinkedIn</p>
                             </a>
-                            <a href="https://github.com/Nahuel-DevOne/" target="_blank" class="m-3 text-decoration-none">
+                            <a href="https://github.com/nahuel-lopez-dev/" target="_blank" class="m-3 text-decoration-none">
                                 <img src="./img/social/github.svg" alt="Imagen del icono de GitHub" class="iconoPresentacion">
                                 <p class="nombreIcono lead">GitHub</p>
                             </a>
