mejorando los estilos responsive en la presentación

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <img src="img/logo1.png" class="gear" alt="Imagen de una rueda con símbolos de etiqueta HTML">
                         <a href="https://linktr.ee/nahuel.lopez" target="_blank" id="marcaPersonal">
                             <p class="m-0">Nahuel</p>
-                            <p class="m-0">NaLoDev♾️</p>
+                            <p class="m-0">NaLo Dev♾️</p>
                         </a>
                         <!-- <span class="justBeNice desplazamiento">#</span> -->
                     </div>
@@ -49,7 +49,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto fs-4 m-1 me-5">
+                    <ul class="navbar-nav ms-auto fs-5 m-1 me-5">
                         <li class="nav-item">
                             <a id="menu" class="nav-link m-2" href="#experiencia">Experiencia</a>
                         </li>
@@ -81,7 +81,7 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Data Engineer & Python Developer</h1>
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy <br>Data Engineer & Python Developer</h1>
                         <p class="presentacionInfoPrincipal lead">
                             Soy de Buenos Aires (Argentina) y actualmente me desempeño como Data Engineer en NTT Data, aunque en mi trabajo diario también hago ciencia de datos y machine learning. 
                             <br>
