--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                         <!-- <span class="gear rodar">S</span> -->
                         <img src="img/logo1.png" class="gear" alt="Imagen de una rueda con símbolos de etiqueta HTML">
                         <a href="https://linktr.ee/nahuel.lopez" target="_blank" id="marcaPersonal">
-                            <p class="m-0">Nahuel</p>
-                            <p class="m-0">NaLo Dev♾️</p>
+                            <p class="m-0">Nahuel ထ</p>
+                            <p class="m-0">NaLo Dev</p>
                         </a>
                         <!-- <span class="justBeNice desplazamiento">#</span> -->
                     </div>
@@ -81,7 +81,7 @@
                 <div class="presentacion mb-4">
                     <!-- Texto de presentación e iconos de redes sociales-->
                     <div class="presentacionInfo stretchRight">
-                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy <br>Data Engineer & Python Developer</h1>
+                        <h1 class="tituloPrincipal">¡Hola! Me llamo Nahuel y soy Data Engineer & Python Developer</h1>
                         <p class="presentacionInfoPrincipal lead">
                             Soy de Buenos Aires (Argentina) y actualmente me desempeño como Data Engineer en NTT Data, aunque en mi trabajo diario también hago ciencia de datos y machine learning. 
                             <br>
@@ -819,7 +819,7 @@
         </div>
         <div class="container-fluid m-0 pb-1 pt-2">
             <a href="#" class="logoFooter">⚡Portfolio⚡</a>
-            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con 💙 por <i><b>NaLoDev♾️</b></i><p/>
+            <p class="footerInfo pb-4 m-0">&copy;2023 Desarrollado con 💙 por <i><b>NaLo Dev ထ</b></i><p/>
         </div>
     </footer>
     <!-- Acá termina el pie de página -->
